--- a/notes/notes-2019-10-21.md
+++ b/notes/notes-2019-10-21.md
@@ -35,10 +35,10 @@ Agenda bash
 
 Principles 
 - Jari went through the email discussion
-- Last week's call agreed on the principle. NBI should be vendor/implementatkon agnostic, i.e. NBI should have a "customer view".
+- Last week's call agreed on the principle. NBI should be vendor/implementation agnostic, i.e. NBI should have a "customer view".
 - Eric raised that we should have a reason to believe that future issues can be handled this way; but there is no guarantee. Need to be extensible.
-- Question: how do we model connectivity and server instances together (e.g. core appliations connected by a transport slice)? Answer: Reza's picture from the Oct 17th call shows how to do this.
-- Decision: we will work based on the model where requirement/implementation are disctinct
+- Question: how do we model connectivity and server instances together (e.g. core applications connected by a transport slice)? Answer: Reza's picture from the Oct 17th call shows how to do this.
+- Decision: we will work based on the model where requirement/implementation are distinct
 
 Terms 
 - Reza talked about what had been discussed last week: "Transport slice" was the term that felt more natural than end-to-end, network, 5G etc terms. "Transport" is a group of connections.
